--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Vahagn's To Do </title>
 <meta name="viewport" content="width=device-width, initial-scale=1"> >
-<link rel="stylesheet" href="/Users/vahagn/Desktop/ACA/Homework7.css">
+<link rel="stylesheet" href="Homework7.css">
 </head>
 <body>
     <h2 id=>My To Do List</h2>
