--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
         <input type="text" id="myInput" placeholder="Write down what I have to do...">
         <span onclick="addNewElement()" class="addBtn">Add</span>
     </div>
-    <script src="/Users/vahagn/Desktop/ACA/Homework7.js" ></script>
+    <script src="Homework7.js" ></script>
 </body>
 </html>
