--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Vahagn's To Do </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/Users/vahagn/Desktop/ACA/Homework7.css">
+<link rel="stylesheet" href="Homework7.css">
 </head>
 
 <body>
@@ -20,6 +20,6 @@
         <input type="text" id="myInput" placeholder="Write down what I have to do...">
         <span onclick="addNewElement()" class="addBtn">Add</span>
     </div>
-    <script src="/Users/vahagn/Desktop/ACA/Homework7.js" ></script>
+    <script src="Homework7.js" ></script>
 </body>
 </html>
