--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li> Go to work  <strong>(Do not be late!!)</strong></li>
         <li><strong>Meet taron</strong> </li>
         <li> <strong>Pay off phone debt</strong> </li>
-        <li> <strong>Enter a smarket</strong> </li>
+        <li> <strong>Enter a supermarket</strong> </li>
         <li class="checked"> <strong>Wash the car</strong> </li>
     </ul>
 
