--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h2 id='toDo'>My To Do List</h2>
     <ul id="myUL">
-        <li> Go to work  <strong>(Do not be late!!)</strong></li>
-        <li><strong>Meet taron</strong> </li>
+        <li> <strong>Go to work  (Do not be late!!)</strong></li>
+        <li><strong>Meet Taron</strong> </li>
         <li> <strong>Pay off phone debt</strong> </li>
         <li> <strong>Enter a supermarket</strong> </li>
         <li class="checked"> <strong>Wash the car</strong> </li>
